hphp/hack/test/typecheck/collection_unexpected_arrow_legacy.php
<?hh

function test(): void {
  // Using key => value in a value-only collection (Vector)
  $x = Vector {'key' => 'value'};
}
